--- a/ScriptingEditor.dproj
+++ b/ScriptingEditor.dproj
@@ -56,7 +56,10 @@
         <SanitizedProjectName>ScriptingEditor</SanitizedProjectName>
         <DCC_UnitSearchPath>.\src\Common;.\src\Common\SynEdit;$(DCC_UnitSearchPath)</DCC_UnitSearchPath>
         <VerInfo_Locale>2057</VerInfo_Locale>
-        <VerInfo_Keys>CompanyName=;FileDescription=$(MSBuildProjectName);FileVersion=1.0.0.0;InternalName=;LegalCopyright=;LegalTrademarks=;OriginalFilename=;ProgramID=com.embarcadero.$(MSBuildProjectName);ProductName=$(MSBuildProjectName);ProductVersion=1.0.0.0;Comments=</VerInfo_Keys>
+        <VerInfo_Keys>CompanyName=;FileDescription=$(MSBuildProjectName);FileVersion=1.5.0.0;InternalName=;LegalCopyright=;LegalTrademarks=;OriginalFilename=;ProgramID=com.embarcadero.$(MSBuildProjectName);ProductName=$(MSBuildProjectName);ProductVersion=1.0.0.0;Comments=</VerInfo_Keys>
+        <VerInfo_IncludeVerInfo>true</VerInfo_IncludeVerInfo>
+        <VerInfo_MinorVer>5</VerInfo_MinorVer>
+        <VerInfo_PreRelease>true</VerInfo_PreRelease>
     </PropertyGroup>
     <PropertyGroup Condition="'$(Base_Win32)'!=''">
         <DCC_UsePackage>rtl;fmxase;vcl;CustomIPTransport;vclactnband;vcldsnap;IndyCore;IndySystem;IcsFmxDXE8Run;vclx;bindcomp;tethering;svnui;appanalytics;dsnap;IcsVclDXE8Run;bindcompvcl;vclimg;vcltouch;IcsCommonDXE8Run;VclSmp;vcldb;bindcompfmx;svn;vclie;bindengine;dbrtl;IndyProtocols;fmx;fmxdae;xmlrtl;fmxobj;vclwinx;$(DCC_UsePackage)</DCC_UsePackage>
@@ -75,6 +78,7 @@
         <DCC_GenerateStackFrames>true</DCC_GenerateStackFrames>
         <DCC_DebugInfoInExe>true</DCC_DebugInfoInExe>
         <DCC_RemoteDebug>true</DCC_RemoteDebug>
+        <VerInfo_Debug>true</VerInfo_Debug>
     </PropertyGroup>
     <PropertyGroup Condition="'$(Cfg_1_Win32)'!=''">
         <DCC_RemoteDebug>false</DCC_RemoteDebug>
@@ -83,6 +87,11 @@
         <BT_BuildType>Debug</BT_BuildType>
         <VerInfo_IncludeVerInfo>true</VerInfo_IncludeVerInfo>
         <VerInfo_Locale>1033</VerInfo_Locale>
+        <DCC_MapFile>3</DCC_MapFile>
+        <VerInfo_MinorVer>3</VerInfo_MinorVer>
+        <VerInfo_Release>2</VerInfo_Release>
+        <VerInfo_Debug>true</VerInfo_Debug>
+        <VerInfo_Keys>CompanyName=;FileDescription=$(MSBuildProjectName);FileVersion=1.3.2.0;InternalName=;LegalCopyright=;LegalTrademarks=;OriginalFilename=;ProgramID=com.embarcadero.$(MSBuildProjectName);ProductName=$(MSBuildProjectName);ProductVersion=1.0.0.0;Comments=</VerInfo_Keys>
     </PropertyGroup>
     <PropertyGroup Condition="'$(Cfg_2)'!=''">
         <DCC_LocalDebugSymbols>false</DCC_LocalDebugSymbols>
@@ -93,49 +102,61 @@
     <PropertyGroup Condition="'$(Cfg_2_Win32)'!=''">
         <AppEnableRuntimeThemes>true</AppEnableRuntimeThemes>
         <AppEnableHighDPI>true</AppEnableHighDPI>
-        <VerInfo_IncludeVerInfo>true</VerInfo_IncludeVerInfo>
         <VerInfo_Locale>1033</VerInfo_Locale>
         <BT_BuildType>Debug</BT_BuildType>
         <DCC_DcuOutput>.\dcu\$(Platform)</DCC_DcuOutput>
         <DCC_ExeOutput>.\bin</DCC_ExeOutput>
+        <DCC_MapFile>3</DCC_MapFile>
+        <DCC_DebugInformation>2</DCC_DebugInformation>
+        <DCC_LocalDebugSymbols>true</DCC_LocalDebugSymbols>
+        <VerInfo_Release>2</VerInfo_Release>
+        <VerInfo_Keys>CompanyName=;FileDescription=$(MSBuildProjectName);FileVersion=1.5.2.0;InternalName=;LegalCopyright=;LegalTrademarks=;OriginalFilename=;ProgramID=com.embarcadero.$(MSBuildProjectName);ProductName=$(MSBuildProjectName);ProductVersion=1.0.0.0;Comments=</VerInfo_Keys>
     </PropertyGroup>
     <ItemGroup>
         <DelphiCompile Include="$(MainSource)">
             <MainSource>MainSource</MainSource>
         </DelphiCompile>
-        <DCCReference Include="src\SE_MainForm.pas">
-            <Form>SEMainForm</Form>
-            <FormType>dfm</FormType>
-        </DCCReference>
-        <DCCReference Include="src\SE_FindForm.pas">
-            <Form>SEFindForm</Form>
-            <FormType>dfm</FormType>
-        </DCCReference>
-        <DCCReference Include="src\SE_GoToLineForm.pas">
-            <Form>SEGoToLineForm</Form>
-            <FormType>dfm</FormType>
-        </DCCReference>
-        <DCCReference Include="src\SE_ConfirmReplaceForm.pas">
-            <Form>SEConfirmReplaceForm</Form>
-            <FormType>dfm</FormType>
-        </DCCReference>
-        <DCCReference Include="src\SE_ReplaceForm.pas">
-            <Form>SEReplaceForm</Form>
-            <FormType>dfm</FormType>
-        </DCCReference>
-        <DCCReference Include="src\SE_SaveModifiedForm.pas">
-            <Form>SESaveModifiedForm</Form>
-            <FormType>dfm</FormType>
-        </DCCReference>
-        <DCCReference Include="src\SE_AboutForm.pas">
-            <Form>SEAboutForm</Form>
-            <FormType>dfm</FormType>
-        </DCCReference>
-        <DCCReference Include="src\Common\ScriptValidatorResult.pas"/>
         <DCCReference Include="src\Common\VerySimpleXML.pas"/>
+        <DCCReference Include="src\Common\ScriptValidatorResult.pas"/>
+        <DCCReference Include="src\GUI\SE_MainForm.pas">
+            <Form>SEMainForm</Form>
+        </DCCReference>
+        <DCCReference Include="src\GUI\SE_EditorForm.pas">
+            <Form>SEEditorForm</Form>
+        </DCCReference>
+        <DCCReference Include="src\GUI\SE_GoToLineForm.pas">
+            <Form>SEGoToLineForm</Form>
+        </DCCReference>
+        <DCCReference Include="src\GUI\SE_FindForm.pas">
+            <Form>SEFindForm</Form>
+        </DCCReference>
+        <DCCReference Include="src\GUI\SE_ReplaceForm.pas">
+            <Form>SEReplaceForm</Form>
+        </DCCReference>
+        <DCCReference Include="src\GUI\SE_ConfirmReplaceForm.pas">
+            <Form>SEConfirmReplaceForm</Form>
+        </DCCReference>
+        <DCCReference Include="src\GUI\SE_SaveModifiedForm.pas">
+            <Form>SESaveModifiedForm</Form>
+        </DCCReference>
+        <DCCReference Include="src\GUI\SE_AboutForm.pas">
+            <Form>SEAboutForm</Form>
+        </DCCReference>
+        <DCCReference Include="src\GUI\SE_WelcomeTab.pas">
+            <Form>SEWelcomeTab</Form>
+        </DCCReference>
+        <DCCReference Include="src\GUI\SE_CommandsDataModule.pas">
+            <Form>SECommandsDataModule</Form>
+            <DesignClass>TDataModule</DesignClass>
+        </DCCReference>
         <DCCReference Include="src\Components\SE_IssueListBox.pas"/>
-        <DCCReference Include="src\Plugins\SE_ValidationPlugin.pas"/>
         <DCCReference Include="src\Components\SE_SnippetListBox.pas"/>
+        <DCCReference Include="src\Plugins\SE_ValidationPlugin.pas"/>
+        <DCCReference Include="src\SE_Globals.pas"/>
+        <DCCReference Include="src\SE_Interfaces.pas"/>
+        <DCCReference Include="src\SE_EditorFactory.pas"/>
+        <DCCReference Include="src\SE_Exceptions.pas"/>
+        <DCCReference Include="src\SE_Log.pas"/>
         <BuildConfiguration Include="Release">
             <Key>Cfg_2</Key>
             <CfgParent>Base</CfgParent>
@@ -156,13 +177,22 @@
                 <Source>
                     <Source Name="MainSource">ScriptingEditor.dpr</Source>
                 </Source>
-                <Excluded_Packages/>
+                <Excluded_Packages>
+                    <Excluded_Packages Name="$(BDSBIN)\dcloffice2k250.bpl">Microsoft Office 2000 Sample Automation Server Wrapper Components</Excluded_Packages>
+                    <Excluded_Packages Name="$(BDSBIN)\dclofficexp250.bpl">Microsoft Office XP Sample Automation Server Wrapper Components</Excluded_Packages>
+                </Excluded_Packages>
             </Delphi.Personality>
             <Platforms>
                 <Platform value="Win32">True</Platform>
             </Platforms>
             <Deployment Version="3">
-                <DeployFile LocalName="Win32\Debug\ScriptingEditor.exe" Configuration="Debug" Class="ProjectOutput">
+                <DeployFile LocalName="bin\ScriptingEditor.exe" Configuration="Debug" Class="ProjectOutput">
+                    <Platform Name="Win32">
+                        <RemoteName>ScriptingEditor.exe</RemoteName>
+                        <Overwrite>true</Overwrite>
+                    </Platform>
+                </DeployFile>
+                <DeployFile LocalName="bin\ScriptingEditor.exe" Configuration="Release" Class="ProjectOutput">
                     <Platform Name="Win32">
                         <RemoteName>ScriptingEditor.exe</RemoteName>
                         <Overwrite>true</Overwrite>
