--- a/ScriptingEditor.dproj
+++ b/ScriptingEditor.dproj
@@ -154,6 +154,8 @@
         <DCCReference Include="src\SE_EditorFactory.pas"/>
         <DCCReference Include="src\SE_Exceptions.pas"/>
         <DCCReference Include="src\SE_Log.pas"/>
+        <DCCReference Include="src\AutoComplete\SE_ACMethods.pas"/>
+        <DCCReference Include="src\AutoComplete\SE_ACParams.pas"/>
         <BuildConfiguration Include="Release">
             <Key>Cfg_2</Key>
             <CfgParent>Base</CfgParent>
